centralizado a nav-bar e adicionado a imagem da logo

--- a/cis/index.html
+++ b/cis/index.html
@@ -11,14 +11,14 @@
     <header>
         <div class="container top">
             <div class="logo">
-                <h1 class="logo"><a href="/"c>PROJETOCIS</a></h1>
+                <h1><a href="/"c><img src="img/logo-topo.png" alt="CIS UniAmérica"></a></h1>
             </div>
             <nav class="nav-bar">
                 <ul>
-                    <li><a href="#">SOBRE</a></li>
-                    <li><a href="#">ESTRUTURA</a></li>
-                    <li><a href="#">SERVIÇOS</a></li>
-                    <li><a href="#">CONTATO</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Estrutura</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Contato</a></li>
                     <li><a class="login" href="#">LOGIN</a></li>
                 </ul>
             </nav>
